<resources>
    <string name="app_name">About Me</string>
    <string name="text_name">Stephanie Pitta</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio">
        Mussum Ipsum, cacilds vidis litro abertis. Paisis, filhis, espiritis santis.
        Não sou faixa preta cumpadi, sou preto inteiris, inteiris. A ordem dos tratores não altera
        o pão duris. Sapien in monti palavris qui num significa nadis i pareci latim.
        Mussum Ipsum, cacilds vidis litro abertis. Paisis, filhis, espiritis santis.
        Não sou faixa preta cumpadi, sou preto inteiris, inteiris. A ordem dos tratores não altera
        o pão duris. Sapien in monti palavris qui num significa nadis i pareci latim.
        Mussum Ipsum, cacilds vidis litro abertis. Paisis, filhis, espiritis santis.
        Não sou faixa preta cumpadi, sou preto inteiris, inteiris. A ordem dos tratores não altera
        o pão duris. Sapien in monti palavris qui num significa nadis i pareci latim.
        Mussum Ipsum, cacilds vidis litro abertis. Paisis, filhis, espiritis santis.
        Não sou faixa preta cumpadi, sou preto inteiris, inteiris. A ordem dos tratores não altera
        o pão duris. Sapien in monti palavris qui num significa nadis i pareci latim.
        Mussum Ipsum, cacilds vidis litro abertis. Paisis, filhis, espiritis santis.
        Não sou faixa preta cumpadi, sou preto inteiris, inteiris. A ordem dos tratores não altera
        o pão duris.
    </string>
    <string name="whats_your_nickname">Whats your nickname?</string>
    <string name="done">Done</string>
</resources>